--- a/src/index.css
+++ b/src/index.css
@@ -753,16 +753,16 @@ video {
   width: 1.75rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .w-12 {
   width: 3rem;
 }
 
 .w-6 {
   width: 1.5rem;
-}
-
-.w-full {
-  width: 100%;
 }
 
 .w-8 {
@@ -876,6 +876,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
 }
 
 .whitespace-nowrap {
