error msg showing on wrong login info

--- a/src/index.css
+++ b/src/index.css
@@ -1145,6 +1145,11 @@ video {
   color: rgba(6, 95, 70, var(--tw-text-opacity));
 }
 
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgba(239, 68, 68, var(--tw-text-opacity));
+}
+
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgba(37, 99, 235, var(--tw-text-opacity));
